fix: в карточках лотов установлено свойство flex-wrap

--- a/styles/style.css
+++ b/styles/style.css
@@ -183,6 +183,7 @@
 /* список карточек */
 .lots__card-list {
   display: flex;
+  flex-wrap: wrap;
   gap: 25px;
   list-style: none;
 }
